--- a/backend/package.json
+++ b/backend/package.json
@@ -1,14 +1,24 @@
 {
   "name": "backend",
   "version": "1.0.0",
-  "description": "Express.js Backend",
-  "main": "app.js",
+  "main": "index.ts",
+  "repository": "https://github.com/Zach-Clay/Challenge.me",
+  "license": "MIT",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start:dev": "nodemon ./index.ts"
   },
-  "author": "",
-  "license": "ISC",
   "dependencies": {
-    "express": "^4.17.3"
+    "@prisma/client": "^3.11.0",
+    "@types/cors": "^2.8.12",
+    "@types/express": "^4.17.13",
+    "@types/node": "^17.0.21",
+    "cors": "^2.8.5",
+    "dotenv": "^16.0.0",
+    "express": "^4.17.3",
+    "http-status-codes": "^2.2.0",
+    "prisma": "^3.11.0",
+    "ts-node": "^10.7.0",
+    "ts-node-dev": "^1.1.8",
+    "typescript": "^4.6.2"
   }
 }
