--- a/backend/package.json
+++ b/backend/package.json
@@ -12,10 +12,10 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.21",
+    "axios": "^0.26.1",
     "cors": "^2.8.5",
     "dotenv": "^16.0.0",
     "express": "^4.17.3",
-    "http-status-codes": "^2.2.0",
     "prisma": "^3.11.0",
     "ts-node": "^10.7.0",
     "ts-node-dev": "^1.1.8",
