--- a/backend/package.json
+++ b/backend/package.json
@@ -8,7 +8,7 @@
     "start:dev": "nodemon ./index.ts"
   },
   "prisma": {
-    "seed": "ts-node prisma/seed.ts"
+    "seed": "node --experimental-specifier-resolution=node --loader ts-node/esm prisma/seed.ts"
   },
   "dependencies": {
     "@prisma/client": "^3.11.0",
