--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,9 +18,11 @@
     "axios": "^0.26.1",
     "expo": "~44.0.0",
     "expo-status-bar": "~1.2.0",
+    "moment": "^2.29.3",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-native": "0.64.3",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-paper": "^4.12.0",
     "react-native-paper-dropdown": "^1.0.7",
     "react-native-web": "0.17.1",
